; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_vce_v1_0.c_vce_v1_0_init_cg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_vce_v1_0.c_vce_v1_0_init_cg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@VCE_CLOCK_GATING_A = common dso_local global i32 0, align 4
@CGC_DYN_CLOCK_MODE = common dso_local global i32 0, align 4
@VCE_CLOCK_GATING_B = common dso_local global i32 0, align 4
@VCE_UENC_CLOCK_GATING = common dso_local global i32 0, align 4
@VCE_UENC_REG_CLOCK_GATING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.radeon_device*)* @vce_v1_0_init_cg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vce_v1_0_init_cg(%struct.radeon_device* %0) #0 {
  %2 = alloca %struct.radeon_device*, align 8
  %3 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %2, align 8
  %4 = load i32, i32* @VCE_CLOCK_GATING_A, align 4
  %5 = call i32 @RREG32(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @CGC_DYN_CLOCK_MODE, align 4
  %7 = load i32, i32* %3, align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @VCE_CLOCK_GATING_A, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @WREG32(i32 %9, i32 %10)
  %12 = load i32, i32* @VCE_CLOCK_GATING_B, align 4
  %13 = call i32 @RREG32(i32 %12)
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = or i32 %14, 30
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = and i32 %16, -14745826
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* @VCE_CLOCK_GATING_B, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @WREG32(i32 %18, i32 %19)
  %21 = load i32, i32* @VCE_UENC_CLOCK_GATING, align 4
  %22 = call i32 @RREG32(i32 %21)
  store i32 %22, i32* %3, align 4
  %23 = load i32, i32* %3, align 4
  %24 = and i32 %23, 6295551
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* @VCE_UENC_CLOCK_GATING, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @WREG32(i32 %25, i32 %26)
  %28 = load i32, i32* @VCE_UENC_REG_CLOCK_GATING, align 4
  %29 = call i32 @RREG32(i32 %28)
  store i32 %29, i32* %3, align 4
  %30 = load i32, i32* %3, align 4
  %31 = and i32 %30, -1024
  store i32 %31, i32* %3, align 4
  %32 = load i32, i32* @VCE_UENC_REG_CLOCK_GATING, align 4
  %33 = load i32, i32* %3, align 4
  %34 = call i32 @WREG32(i32 %32, i32 %33)
  ret void
}

declare dso_local i32 @RREG32(i32) #1

declare dso_local i32 @WREG32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
